# p3ui

./: .gitignore  .gitmodules  CMakeLists.txt  Manifest.in  README.md  license.py  license.tmpl  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
.run/: async_main.run.xml  canvas debug.run.xml  canvas.run.xml  demo_ skia text.run.xml  demo_ svg.run.xml  gallery debug.run.xml  gallery release.run.xml  large_image.run.xml  license_add.run.xml  license_rem.run.xml  main.run.xml  matplotlib.run.xml  video_capture.run.xml
cpp/: CMakeLists.txt
cpp/p3/: CMakeLists.txt
cpp/p3/source/p3/: Builder.cpp  Builder.h  Button.cpp  Button.h  Cascadable.h  CheckBox.cpp  CheckBox.h  ChildWindow.cpp  ChildWindow.h  Collapsible.cpp  Collapsible.h  Color.h  ColorEdit.cpp  ColorEdit.h  ComboBox.cpp  ComboBox.h  Context.cpp  Context.h  DataSuffix.h  Factory.cpp  Factory.h  Flexible.cpp  Flexible.h  FlexibleTypes.h  Font.cpp  Font.h  Image.cpp  Image.h  InputScalar.cpp  InputScalar.h  InputText.cpp  InputText.h  Layout.cpp  Layout.h  Loader.cpp  Loader.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  (+58 more)
cpp/p3/source/p3/backend/: OpenGL2RenderBackend.cpp  OpenGL2RenderBackend.h  OpenGL3RenderBackend.cpp  OpenGL3RenderBackend.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLTexture.cpp  OpenGLTexture.h
cpp/p3/source/p3/platform/: Monitor.cpp  Monitor.h  Timer.h  VideoMode.cpp  VideoMode.h  Window.cpp  Window.h  WindowTaskQueue.h
cpp/p3/source/p3/widgets/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ChildWindow.cpp  ChildWindow.h  Collapsible.cpp  Collapsible.h  ColorEdit.cpp  ColorEdit.h  ComboBox.cpp  ComboBox.h  Image.cpp  Image.h  InputScalar.cpp  InputScalar.h  InputText.cpp  InputText.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  Plot.cpp  Plot.h  Popup.cpp  Popup.h  ProgressBar.cpp  ProgressBar.h  ScrollArea.cpp  ScrollArea.h  Slider.cpp  Slider.h  Tab.cpp  Tab.h  Table.cpp  Table.h  ToolTip.cpp  ToolTip.h
cpp/p3/tests/: CMakeLists.txt
cpp/p3/tests/source/: TestBuilder.cpp  TestFactory.cpp  TestLoader.cpp  TestNode.cpp
cpp/p3_parser/: CMakeLists.txt
cpp/p3_parser/tests/: CMakeLists.txt
cpp/p3_parser/tests/source/: TestParser.cpp  TestTokenizers.cpp
cpp/p3_python/: CMakeLists.txt
demos/canvas/: main.py  svg.py  text.py
demos/gallery/: gallery.py  main.py  tab_icons.py  tab_layout.py  tab_plots.py  tab_system.py  tab_widgets.py  vertical_scroll_area.py
demos/icons/: icon_provider.py  main.py
demos/large_image/: main.py
demos/matplotlib/: bar_chart.py  filled_chart.py  gradient_chart.py  line_styles.py  main.py  mark_every.py
demos/video_capture/: main.py
p3ui/: __init__.py  matplotlib_surface.py
p3ui/matplotlib/: __init__.py  figure_canvas.py  figure_manager.py  graphics_context.py  make_font.py  renderer.py
p3ui/mpl/: _units.py  figure_canvas.py  make_font.py  renderer.py
python/canvas/: main.py
python/gallery/: async_main.py  color4.py  flexibles.py  gallery.py  imgui.ini  input_base.py  main.py  main.spec  main_menu_bar.py  material_icons.py  menu_bar.py  plots.py  style_editor.py  tab_flexible.py  tab_icons.py  tab_plots.py  tab_styles.py  tab_system.py  tab_widgets.py  tables.py  timer_resolution.py  view_options.py  widgets.py
python/plot/: main.py  (+5 more)
src/: CMakeLists.txt
src/examples/layout/: test_vertical.cpp
src/p3/: Button.cpp  Button.h  Cascadable.h  CheckBox.cpp  CheckBox.h  ChildWindow.cpp  ChildWindow.h  Collapsible.cpp  Collapsible.h  ColorEdit.cpp  ColorEdit.h  ComboBox.cpp  ComboBox.h  Context.cpp  Context.h  Flexible.cpp  Flexible.h  Font.cpp  Font.h  Image.cpp  Image.h  InputScalar.cpp  InputScalar.h  InputText.cpp  InputText.h  LengthPercentageTypes.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  Node.cpp  Node.h  OnScopeExit.h  Plot.cpp  Plot.h  Popup.cpp  Popup.h  ProgressBar.cpp  (+31 more)
src/p3/backend/: OpenGL2RenderBackend.cpp  OpenGL2RenderBackend.h
src/p3/python/: Button.cpp  CheckBox.cpp  ChildWindow.cpp  Collapsible.cpp  ColorEdit.cpp  ComboBox.cpp  Context.cpp  InputScalar.cpp  Menu.cpp  MenuBar.cpp  Node.cpp  Plot.cpp  Popup.cpp  ScrollArea.cpp  Style.cpp  Tab.cpp  Text.cpp  Texture.cpp  Theme.cpp  UserInterface.cpp  Window.cpp  p3ui.cpp  p3ui.h
(+73 files in other folders)
